# agentlab

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agentlab/: __init__.py
agentlab/cli/: __init__.py  main.py
agentlab/core/: __init__.py  types.py
agentlab/dashboard/: __init__.py  app.py
agentlab/providers/: __init__.py  anthropic.py  mock.py  ollama.py  openai.py
agentlab/runners/: __init__.py
agentlab/scoring/: __init__.py  ast_equals.py  diff_size.py  pytest_scorer.py  regex_match.py  rubric.py  string_equals.py
agentlab/store/: __init__.py
agentlab/strategies/: __init__.py  direct.py  react.py
agentlab/suites/: __init__.py
agentlab/tools/: __init__.py  file_tools.py  shell.py
docs/: DEPLOY.md
examples/suites/: python_refactor.yaml  smoke.yaml
tests/: test_bench.py  test_chaos.py  test_dashboard.py  test_mock_provider.py  test_runner_end_to_end.py  test_scoring.py  test_store.py  test_suites.py  test_tools.py  test_types.py
