[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlab"
version = "0.1.0"
description = "Multi-model AI coding agent evaluation harness for prompt engineering calibration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "SAY-5", email = "saiasish.cnp@gmail.com" }]
dependencies = [
    "aiohttp>=3.10",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
openai = ["openai>=1.50"]
anthropic = ["anthropic>=0.40"]
google = ["google-generativeai>=0.8"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=4.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML",
]

[project.scripts]
agentlab = "agentlab.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agentlab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "benchmark: performance benchmark (skipped unless --benchmark-only passed)",
]
addopts = "-m 'not benchmark'"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
